Fix issue with stickynavbar offset on smaller screens

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -114,11 +114,6 @@ nav a {
   width: 100%
 }
 
-/* Add some top padding to the page content to prevent sudden quick movement (as the navigation bar gets a new position at the top of the page (position:fixed and top:0) */
-.sticky + .genre-section {
-  padding-top: 45px;
-}
-
 .nav-genre:hover {
   background-color: #444444;
 }
